--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "eth-ens-namehash": "^2.0.8",
     "ethereumjs-testrpc": "^6.0.3",
     "ethereumjs-util": "^5.1.5",
+    "jq": "^1.7.2",
     "js-nacl": "^1.2.2",
     "prompt-confirm": "^1.2.0",
     "ramda": "^0.25.0",
     "sanctuary": "^0.14.1",
+    "solium": "^1.1.6",
     "truffle": "^4.1.5",
     "truffle-fast-compile": "^0.0.3",
     "web3": "^1.0.0-beta.33",
