--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "private": false,
   "dependencies": {
     "async-parallel": "^1.2.3",
+    "bech32": "^1.1.3",
+    "bs58": "^4.0.1",
     "colors": "^1.2.1",
     "eth-ens-namehash": "^2.0.8",
     "ethereumjs-testrpc": "^6.0.3",
