--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,7 @@ before_install:
   - sudo add-apt-repository -y ppa:ethereum/ethereum
   - sudo apt-get update
   - sudo apt-get install -y solc
+script:
+  - yarn test
+after_script:
+  - yarn coverage && cat coverage/lcov.info | coveralls
