Moved EnsPx to contracts + added ./bin/deploy-ix-full (only works for fresh atm tho)

--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "bs58": "^4.0.1",
     "colors": "^1.2.1",
     "coveralls": "^3.0.1",
+    "enquirer": "^1.0.3",
     "eth-ens-namehash": "^2.0.8",
     "ethereumjs-testrpc": "^6.0.3",
     "ethereumjs-util": "^5.1.5",
     "jq": "^1.7.2",
     "js-nacl": "^1.2.2",
+    "node-clip": "^0.1.1",
     "prompt-confirm": "^1.2.0",
     "ramda": "^0.25.0",
     "sanctuary": "^0.14.1",
     "solidity-coverage": "^0.5.1",
     "solium": "^1.1.6",
+    "sv-lib": "^0.1.2",
     "truffle": "trufflesuite/truffle",
     "web3": "^1.0.0-beta.33",
     "yargs": "^11.0.0"
