--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eth-ens-namehash": "^2.0.8",
     "ethereumjs-testrpc": "^6.0.3",
     "ethereumjs-util": "^5.1.5",
+    "ganache-cli": "^6.1.0",
     "jq": "^1.7.2",
     "js-nacl": "^1.2.2",
     "node-clip": "^0.1.1",
