--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "compile-sv-light": "./compileAllSvLight.sh",
     "compile-ens": "for f in $(ls ./ens | grep sol); do ./bin/compile.sh -d ens -c $f -o _distEns; done",
     "coverage": "solidity-coverage",
-    "c": "./bin/compile.sh -c"
+    "c": "./bin/compile.sh -c",
+    "diff": "git diff -- . ':(exclude)_solDist/*'"
   }
 }
