ballotBox tests passing

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "debug": "truffle debug",
     "deploy": "node ./bin/deploy.js",
     "cli": "node -i ./bin/contractCli.js --name",
+    "truffle-compile": "truffle compile --all",
     "compile-sv-light": "./compileAllSvLight.sh",
     "compile-ens": "for f in $(ls ./ens | grep sol); do ./bin/compile.sh -d ens -c $f -o _distEns; done",
     "coverage": "solidity-coverage",
