--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,16 @@ cache:
   yarn: true
   directories:
     - "node_modules"
-sudo: enabled
+    - "build"
+    - "db"
+sudo: required
 before_install:
   - sudo add-apt-repository -y ppa:ethereum/ethereum
   - sudo apt-get update
   - sudo apt-get install -y solc
+before_script:
+  - mkdir -p db
+  - yarn reset-test
 script:
   - yarn test
 after_script:
